# labs3term

./: README.md
lab3term_1_1/: CMakeLists.txt  lab3term1_1.txt  main.cpp
lab3term_1_2/: CMakeLists.txt  Figure.cpp  Figure.h  Polygon.cpp  Polygon.h  Quadrangle.cpp  Quadrangle.h  Triangular.cpp  Triangular.h  functions.cpp  functions.h  main.cpp
lab3term_3/: CMakeLists.txt  main.cpp
pproject/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt  lab3term_project.txt  main.cpp
